--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.0.18",
     "axios": "^1.4.0",
     "next": "13.4.7",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
