--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "13.4.7",
     "query-string": "^8.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
