--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "13.4.7",
     "query-string": "^8.1.0",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1"
   },
