--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,7 +6,8 @@
       "@/containers/*": ["src/containers/*"],
       "@/context/*": ["src/context/*"],
       "@/services/*": ["src/services/*"],
-      "@/utils/*": ["src/utils/*"]
+      "@/utils/*": ["src/utils/*"],
+      "@/common/*": ["src/common/*"]
     }
   }
 }
