--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
     "@mui/material": "^5.13.7",
+    "@redux-devtools/extension": "^3.2.5",
     "axios": "^1.4.0",
     "formik": "^2.4.2",
     "next": "13.4.7",
+    "next-redux-wrapper": "^8.1.0",
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-redux": "^8.1.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "use-reducer-async": "^2.1.1",
     "yup": "^1.2.0"
   },
